css/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Start */
@font-face {
	font-family: 'Norse Bold';
	src: url('/fonts/Norse-Bold.otf');
	font-weight: bold;
	font-style: normal;
}

:root {
	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
	display: flex;
	height: 100vh;
	width: 100vw;
}

#cover-container {
	flex: 1;
	display: flex;
	position: relative
}

#cover-container > img {
	object-fit: cover;
	width: 100%;
}

#cover-brand {
	width: 100%;
	height: 160px;
	background-color: rgba(0, 0, 0, 0.5);
	position: absolute;
	left: 0px;
	top: 25%;
	display: flex;
	justify-content: center;
	align-items: center;
}

#cover-brand > img {
	height: 80%;
}

#cover-brand > h1 {
	color: white;
	font-size: 8rem;
	font-family: 'Norse Bold';
}


main {
	background-color: #F9FAFB;
	flex: 2;
	display: flex;
	flex-direction: column;
	justify-content: center;
	gap: 20px;
	min-width: 390px;
}

main > div {
	padding: 10px 40px;
}

main > div:first-child {
	margin-bottom: 25px;
}

main > div:first-child > p:last-child {
	margin-top: 20px;
}

p {
	line-height: 1.1em;
	padding: 2px 0;
	max-width: 75ch;
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
}

p.large {
	font-size: 1.4rem;
	font-weight: 600;
}

#form-card {
	background-color: white;
	box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.2);
}

form {
	max-width: 600px;
	display: flex;
	flex-wrap: wrap;
	gap: 15px;
	margin: 20px 0;
}

form > .field {
	display: flex;
	flex-direction: column;
	margin-right: 40px;;
	flex: auto;
	gap: 4px;
}

label {
	letter-spacing: 2px;
	font-size: 0.7rem;
	font-weight: 600;
}

input {
	border: 1px solid #E5E7EB;
	border-radius: 6px;
	padding: 6px;
	outline: none;
}

input:focus {
	border-color: #1f67dc;
	box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.2);
}

input:invalid {
	border-color: rgb(167, 34, 34);
}

main > div:last-child {
	display: flex;
	flex-direction: column;
	align-items: start;
	gap: 30px
}

button {
	padding: 20px 50px;
	border: none;
	border-radius: 10px;
	background-color: #596D48;
	color: white;
	font-size: 1rem;
	font-weight: 600;
	box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.2);
}

button:hover {
	cursor: pointer;
}

button:active {
	background-color: #414f34;
}

a {
	color: #596D48;
	font-weight: 600;
	text-decoration: none;
}

a:active {
	color: #414f34;
}

.error {
	color: rgb(167, 34, 34);
}

